Enable preview for unit testing