@@ -127,6 +127,7 @@
                     <release>${maven.compiler.release}</release>
                     <encoding>${project.build.sourceEncoding}</encoding>
                     <compilerArgs>
+                        <!-- Enable JEPs in preview -->
                         <arg>--enable-preview</arg>
                     </compilerArgs>
                 </configuration>
@@ -139,6 +140,9 @@
 
                 <!-- Configuration for DynamicTests to retain their names -->
                 <configuration>
+                    <!-- Enable JEPs in preview -->
+                    <argLine>--enable-preview</argLine>
+
                     <statelessTestsetReporter
                             implementation="org.apache.maven.plugin.surefire.extensions.junit5.JUnit5Xml30StatelessReporter">
                         <disable>false</disable>
